--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "license": "ISC",
   "devDependencies": {
     "electron": "^31.0.2"
+  },
+  "dependencies": {
+    "chokidar": "^3.6.0"
   }
 }
