--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "electron": "^31.0.2"
   },
   "dependencies": {
-    "chokidar": "^3.6.0"
+    "chokidar": "^3.6.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongo": "^0.1.0",
+    "mongodb": "^6.14.2"
   }
 }
